initial fabfile example

--- a/ansible/roles/base/tasks/installPackages.yml
+++ b/ansible/roles/base/tasks/installPackages.yml
@@ -1,3 +1,7 @@
 ---
 - name: install libselinux-python
   yum: name=libselinux-python state=present
+- name: install curl
+  yum: name=
+- name: install wget
+  yum: name=
